--- a/HISTORY
+++ b/HISTORY
@@ -90,3 +90,8 @@ LiDAR Viewer 2.4:
 LiDAR Viewer 2.5:
 - Added ability to read gzipped ASCII input files to preprocessor.
 - Bumped Vrui version requirement to 1.0-065.
+
+LiDAR Viewer 2.6:
+- Now printing strike and dip angle to console when creating a strike+
+  dip indicator primitive.
+- Bumped Vrui version requirement to 2.0-pre.
