--- a/HISTORY
+++ b/HISTORY
@@ -100,3 +100,14 @@ LiDAR Viewer 2.7:
 - Some minor improvements and bug fixes.
 - Bumped Vrui version requirement to 2.1-001.
 - Changed build system to simplify creating binary packages.
+
+LiDAR Viewer 2.8:
+- Bumped Vrui version requirement to 2.2-001.
+- Changed build system to follow Vrui's new modular build system.
+- New transformation functionality in LidarPreprocessor.
+- Significant code clean-up in LidarPreprocessor.
+- New neighborhood-size based illumination in LidarIlluminator.
+- Proper handling of offset vectors when newly-extracted primitives are
+  printed.
+- Added ability to load and store selector tools' states in
+  configuration files.
